Fix HTML structure in index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
 
     
 
-	<br>	<h3> The sample ML model built using RandomForestClassifier, built form ec2 instance, deployed into kyma stage, exposed using APIRule V2. How good it would be if it was built using deep learning models like ANN, CNN, or RNN or using transfer learning model on top of state of the art models opensource available. ! WORK IN PROGRESS ! </h3><br><br><br><br>
+		<h3> The sample ML model built using RandomForestClassifier, built form ec2 instance, deployed into kyma stage, exposed using APIRule V2. How good it would be if it was built using deep learning models like ANN, CNN, or RNN or using transfer learning model on top of state of the art models opensource available. ! WORK IN PROGRESS ! </h3><br><br><br><br>
 
 <form id="predictForm"> 
     <input type="number" name="Pregnancies" placeholder="Pregnancies" required><br> 
